WLD5-15 add mobile end's scrollbar hidden, add description, fix menu style

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,11 +57,9 @@
 body {
   font-family: Poppins !important;
   color: var(--theme-black);
-  /* color: rgb(var(--foreground-rgb)); */
-  /* background: linear-gradient( */
-      /* to bottom, */
-      /* transparent, */
-      /* rgb(var(--background-end-rgb)) */
-    /* ) */
-    /* rgb(var(--background-start-rgb)); */
+}
+@media (min-width: 1024px) {
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
